--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+#banner
+#http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20
 
+
+#web
 server.port=8090
+
+#mybatis
+spring.datasource.url=jdbc:mysql://10.177.98.16:3306/zdcloud?useUnicode=true&characterEncoding=GBK&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=11qq!!qwer1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
